--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "pod": "cd ios && pod install && cd .. && yarn ios"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^9.3.6",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-contacts": "^7.0.5",
