--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -257,7 +257,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.0.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation project(':react-native-vector-icons')
-
+    implementation project(':react-native-in-app-review')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
