--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "pod": "cd ios && pod install && cd .. && yarn ios"
   },
   "dependencies": {
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/netinfo": "^9.3.6",
     "@react-native-community/push-notification-ios": "^1.10.1",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-contacts": "^7.0.5",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.0",
+    "react-native-in-app-review": "^4.1.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "^2.12.0",
+    "react-native-skeleton-content-nonexpo": "^1.0.13",
     "react-native-svg": "^13.5.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
