--- a/package.json
+++ b/package.json
@@ -16,25 +16,53 @@
     "pod": "cd ios && pod install && cd .. && yarn ios"
   },
   "dependencies": {
+    "@fawazahmed/react-native-read-more": "^2.3.7",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/netinfo": "^9.3.6",
     "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.4",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.4",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-animated-pagination-dot": "^0.4.0",
     "react-native-contacts": "^7.0.5",
+    "react-native-debounce-input": "^1.0.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-crop-picker": "^0.38.1",
     "react-native-image-picker": "^4.10.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-in-app-review": "^4.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^4.12.5",
     "react-native-permissions": "^3.6.1",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.12.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-simple-toast": "^1.1.4",
     "react-native-skeleton-content-nonexpo": "^1.0.13",
     "react-native-svg": "^13.5.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1"
+    "react-native-video": "^5.2.1",
+    "react-native-wheel-picker-android": "^2.0.6",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
