--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/netinfo": "^9.3.6",
     "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-firebase/app": "12.9.0",
+    "@react-native-firebase/messaging": "12.9.0",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.4",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.1.3",
     "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
@@ -34,6 +39,7 @@
     "react-native-animated-pagination-dot": "^0.4.0",
     "react-native-contacts": "^7.0.5",
     "react-native-debounce-input": "^1.0.5",
+    "react-native-device-info": "^10.3.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.38.1",
@@ -52,6 +58,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-share": "^8.0.0",
     "react-native-simple-toast": "^1.1.4",
     "react-native-skeleton-content-nonexpo": "^1.0.13",
     "react-native-svg": "^13.5.0",
