--- a/ios/Memofac/Info.plist
+++ b/ios/Memofac/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSContactsUsageDescription</key>
 	<string>contact permission</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>photo permission</string>
 	<key>NSPhotoLibraryUsageDescription</key>
