--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "release": "react-native run-android --variant=release",
     "remove": "adb uninstall com.memofac",
-    "android": "react-native run-android",
+    "android": "npx react-native run-android -- --reset-cache",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "reset": "react-native start --reset-cache",
@@ -29,11 +29,15 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
+    "@reduxjs/toolkit": "^1.9.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
-    "axios": "^1.1.3",
+    "axios": "0.24.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
+    "patch-package": "^6.5.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-animated-pagination-dot": "^0.4.0",
