--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,6 +6,12 @@ include ':react-native-video'
 project(':react-native-video').projectDir = new File(rootProject.
 projectDir, '../node_modules/react-native-video/android-exoplayer')
 
+
+
+include ':react-native-push-notification'
+project(':react-native-push-notification').projectDir = file('../node_modules/react-native-push-notification/android')
+
+
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 include ':react-native-in-app-review'
