--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint .",
     "aab": "cd android && ./gradlew bundleRelease && cd ..",
     "clean": "cd android && ./gradlew clean && cd ..",
-    "pod": "cd ios && pod install && cd .. && yarn ios"
+    "pod": "cd ios && pod install && cd .. && yarn ios",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@fawazahmed/react-native-read-more": "^2.3.7",
@@ -58,6 +59,7 @@
     "react-native-paper": "^4.12.5",
     "react-native-permissions": "^3.6.1",
     "react-native-progress": "^5.0.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.12.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
@@ -65,6 +67,7 @@
     "react-native-share": "^8.0.0",
     "react-native-simple-toast": "^1.1.4",
     "react-native-skeleton-content-nonexpo": "^1.0.13",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.5.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
