--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -25,7 +25,18 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
+
+
+
+
 FLIPPER_VERSION=0.125.0
+
+
+
+MYAPP_UPLOAD_STORE_FILE=memofac.keystore
+MYAPP_UPLOAD_KEY_ALIAS=memofac-alias
+MYAPP_UPLOAD_STORE_PASSWORD=memofac
+MYAPP_UPLOAD_KEY_PASSWORD=memofac
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
