--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "0.24.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "deprecated-react-native-prop-types": "^2.3.0",
     "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.4",
